@@ -6,7 +6,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -23,45 +23,45 @@ import tv.codely.shared.domain.bus.event.EventBus;
 @AutoConfigureMockMvc
 public abstract class ApplicationTestCase {
 
-	@Autowired
-	private MockMvc mockMvc;
+    @Autowired
+    private MockMvc mockMvc;
 
-	@Autowired
-	private EventBus eventBus;
+    @Autowired
+    private EventBus eventBus;
 
-	protected void assertResponse(String endpoint, Integer expectedStatusCode, String expectedResponse) throws Exception {
-		ResultMatcher response = expectedResponse.isEmpty() ? content().string("") : content().json(expectedResponse);
+    private ResultMatcher expectedContent(String response) {
+        return response.isEmpty() ? content().string("") : content().json(response);
+    }
 
-		mockMvc.perform(get(endpoint)).andExpect(status().is(expectedStatusCode)).andExpect(response);
-	}
+    protected void assertResponse(String endpoint, Integer expectedStatusCode, String expectedResponse) throws Exception {
+        mockMvc.perform(get(endpoint))
+               .andExpect(status().is(expectedStatusCode))
+               .andExpect(expectedContent(expectedResponse));
+    }
 
-	protected void assertResponse(
-		String endpoint,
-		Integer expectedStatusCode,
-		String expectedResponse,
-		HttpHeaders headers
-	) throws Exception {
-		ResultMatcher response = expectedResponse.isEmpty() ? content().string("") : content().json(expectedResponse);
+    protected void assertResponse(String endpoint, Integer expectedStatusCode, String expectedResponse, HttpHeaders headers)
+        throws Exception {
+        mockMvc.perform(get(endpoint).headers(headers))
+               .andExpect(status().is(expectedStatusCode))
+               .andExpect(expectedContent(expectedResponse));
+    }
 
-		mockMvc.perform(get(endpoint).headers(headers)).andExpect(status().is(expectedStatusCode)).andExpect(response);
-	}
+    protected void assertRequestWithBody(String method, String endpoint, String body, Integer expectedStatusCode) throws Exception {
+        mockMvc.perform(
+                request(HttpMethod.valueOf(method), endpoint)
+                    .content(body)
+                    .contentType(APPLICATION_JSON))
+               .andExpect(status().is(expectedStatusCode))
+               .andExpect(content().string(""));
+    }
 
-	protected void assertRequestWithBody(String method, String endpoint, String body, Integer expectedStatusCode)
-		throws Exception {
-		mockMvc
-			.perform(request(HttpMethod.valueOf(method), endpoint).content(body).contentType(APPLICATION_JSON))
-			.andExpect(status().is(expectedStatusCode))
-			.andExpect(content().string(""));
-	}
+    protected void assertRequest(String method, String endpoint, Integer expectedStatusCode) throws Exception {
+        mockMvc.perform(request(HttpMethod.valueOf(method), endpoint))
+               .andExpect(status().is(expectedStatusCode))
+               .andExpect(content().string(""));
+    }
 
-	protected void assertRequest(String method, String endpoint, Integer expectedStatusCode) throws Exception {
-		mockMvc
-			.perform(request(HttpMethod.valueOf(method), endpoint))
-			.andExpect(status().is(expectedStatusCode))
-			.andExpect(content().string(""));
-	}
-
-	protected void givenISendEventsToTheBus(DomainEvent... domainEvents) {
-		eventBus.publish(Arrays.asList(domainEvents));
-	}
+    protected void givenISendEventsToTheBus(DomainEvent... domainEvents) {
+        eventBus.publish(List.of(domainEvents));
+    }
 }
